# PathEditorNative

./: .gitignore  Cargo.toml  PACKAGING.md  README.md
installer/: path_editor_native.iss
packaging/: PORTABLE_README.txt
scripts/: package.ps1
src/: main.rs
